--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Rawgher/bamazon-database#readme",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "console.table": "^0.10.0",
     "easy-table": "^1.1.1",
     "inquirer": "^6.1.0",
